--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-    "name": "zapamitter",
-    "version": "1.0.0",
-    "description": "Helps with preorders",
-    "main": "index.js",
-    "scripts": {
-        "start": "electron .",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "pack": "electron-builder --dir",
-        "dist": "electron-builder"
-
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "csvjson": "^5.0.0"
-    },
-    "devDependencies": {
-        "electron-builder": "^20.15.1"
-    },
-    "build": {
-        "appId": "com.electron.zapamitter",
-        "mac": {
-            "category": "com.electron.zapamitter"
-        }
-    },
-    "win": {
-        "target": ["portable"],
-        "electronUpdaterCompatibility": "1.0.0"
+  "name": "zapamitter",
+  "version": "1.0.0",
+  "description": "Helps with preorders",
+  "main": "index.js",
+  "scripts": {
+    "start": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "csvjson": "^5.0.0",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "electron-builder": "^20.15.1"
+  },
+  "build": {
+    "appId": "com.electron.zapamitter",
+    "mac": {
+      "category": "com.electron.zapamitter"
     }
+  },
+  "win": {
+    "target": [
+      "portable"
+    ],
+    "electronUpdaterCompatibility": "1.0.0"
+  }
 }
